# commonvoice-status

./: .gitignore  README.md  po4a.cfg  pyproject.toml  pyproject.toml.bak
.github/workflows/: build-rpm.yml  release.yml  rpm-build.yml
.tx/: config
build-new/commonvoice-status_0.2.1_all/DEBIAN/: control
build-new/commonvoice-status_0.2.1_all/usr/lib/python3/dist-packages/commonvoice_status/: __init__.py  main.py
build-new/commonvoice-status_0.2.1_all/usr/share/applications/: se.danielnylander.CommonVoiceStatus.desktop
data/: se.danielnylander.CommonVoiceStatus.desktop  se.danielnylander.CommonVoiceStatus.desktop.in
data/man/: commonvoice-status.1
po/: README.md  commonvoice-status.pot  sv.mo  sv.po
po/man/: commonvoice-status.1.pot  sv.po
po/sv/LC_MESSAGES/: commonvoice-status.mo
rpm-build/commonvoice-status_0.2.1/usr/lib/python3/dist-packages/commonvoice_status/: __main__.py  api.py
rpm-build/commonvoice-status_0.2.1/usr/share/locale/sv/LC_MESSAGES/: commonvoice-status.mo
src/commonvoice_status/: __init__.py  i18n.py  main.py  notify.py  window.py
