[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commonvoice-status"
version = "0.1.4"
description = "View Mozilla Common Voice recording statistics per language"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
requires-python = ">=3.10"
dependencies = ["PyGObject>=3.42"]
keywords = ["common-voice", "mozilla", "gtk4", "statistics", "speech"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.urls]
Homepage = "https://github.com/yeager/commonvoice-status"
"Bug Tracker" = "https://github.com/yeager/commonvoice-status/issues"

[project.gui-scripts]
commonvoice-status = "commonvoice_status.main:main"

[tool.setuptools.packages.find]
where = ["src"]
